@@ -5,12 +5,13 @@ AUX nginx.logrotate 332 RMD160 65314d1b78142f3653e98e0c2cdff9deec69fd77 SHA1 c6b
 AUX passenger-CFLAGS.patch 646 RMD160 12f1e5f80fd2694fed612226561670f9a0f7f556 SHA1 1f9e2df74069a8d863e850a0e7e13bd0e8fc8fcb SHA256 42b5221b418df055cd51d03057d92fb93c4f1bbca56a1ea35cc6f5c5d9e1953d
 DIST Mod_rrd_graph-0.2.0.tar.gz 3793 RMD160 fbb9698f18fa69cdfd311b0f7d43ccfe046937f0 SHA1 12b75d833d54aece7838359ef1214fe95602c051 SHA256 fbb095b5dbab87ab0ef6be663d9837ec07efbb5df5250efe40fbbab1b898372d
 DIST chunkin-nginx-module-0.19.tgz 84817 RMD160 421457c805701d1bf740caad6d36163a32bfcfba SHA1 bb1a39de6a93db76946ea936564c6a36825ee5a1 SHA256 fb5494cf8bf449b01c73b49c5da39da614ae32be55b4dd354633e1b2dce770f0
-DIST nginx-0.8.36.tar.gz 623359 RMD160 b29ce2c60ea77f7bad5672939cc16ea39ff1ceac SHA1 4068aca8626892840dce670c5c158d2f8c72663d SHA256 d1b8a54d2d646ff21deaa1e3ec48cca5c143da5d4390e9b3dd001eaa4c9992d9
+DIST nginx-0.8.38.tar.gz 623969 RMD160 62b23252d16a861ea092cbd8bc28882e4f84157d SHA1 8e48ac109b07f0542ccda93e5b4bab67d9598aef SHA256 a97241207e7060aa04571e313908f22e007df5b2667c42274420e6a961b2c8c5
 DIST nginx_http_push_module-0.692.tar.gz 29119 RMD160 9d2be16074cf28115af0f1d8f3646937cda649ad SHA1 72103084cad8f4d3d9a49a6b04cf780e4541605d SHA256 64868708071aa21dbc4c7a07d149dd6ec9108fb7eaf2aad5ad069406151f17fe
 DIST nginx_mp4_streaming_public_20081229.tar.bz2 9469 RMD160 ec4c8a0ef86db6cf63f4697546462b127305f5a8 SHA1 ad909c369fa092b6ff457c599213d567a8a66936 SHA256 4908709c50f73d73cb1c16136eaca4b280d8abb60dfd302e79c48f71a68c5d3e
+DIST ngx-http-headers-more-0.08.tar.gz 71764 RMD160 63ee177d5abca7c958c88197f02a4063c88dba7c SHA1 b8c6f2499e44fd9fb84bef87b3f4588ddfa70798 SHA256 3e3bc43e98d95b8a0923cf6ec1af5644e855d15e33b6553096e02c53c69bc4d5
 DIST ngx_http_auth_pam_module-1.1.tar.gz 5193 RMD160 38437a1f5d34f93b22abb9f0a7181be756356d33 SHA1 d04065a512169925dda8bce710e1dc5012cac47b SHA256 ea9da5f106b952729398248cddabbe25f7a5752993e91c9b8252dbc2b03b8ecd
 DIST passenger-2.2.11.tar.gz 2058085 RMD160 54ee5ab25155adaf4b6be9dc0aee190a323254e5 SHA1 9c38d364f59cb72c14a2f4c22445252468f08c4e SHA256 9d4aa14a4dfe9daa713aa19a787e1a5bee0db9f3625e17ffebe1e5325aa20a88
 DIST uwsgi-0.9.5.tar.gz 118203 RMD160 c6ffd2661dd623e848002604798e4a18402f7d76 SHA1 264572059254e2cca771908050d7534aaafff1a8 SHA256 49e88485b9f91693409c255738bc6a6f2a6f856a8a0f04b07dccf5ab7e3de0bd
-EBUILD nginx-0.8.36-r1.ebuild 10583 RMD160 d55f2a8714c98d4ca7e69a1e346c855ee82a06d4 SHA1 5615874426d62ee07fef3e313acb743d567020ea SHA256 900ba8048a17f270877281a8382c76758e0e40d0729f8d6852ccd5dc7038aac4
-MISC ChangeLog 2927 RMD160 26c9914599114f8866da48387c9438bf16ef838a SHA1 194fa9501ed81b51a6d772ac6ba63c9197ab5391 SHA256 47bcf2f50f9ccb342617af37bd65e954545300979be29823526547fdbdc61635
+EBUILD nginx-0.8.38.ebuild 11239 RMD160 ff3e829bd96b588c4de0c5e8e385a825eddc2370 SHA1 0ad81eb85d21077eee560207119f43fa8429bd47 SHA256 946ead259521ea8a6414aba560683a4136829448e78e9c347fa6290229c3dfd1
+MISC ChangeLog 3035 RMD160 9ad7c9c3226a6bbcd1a6ce78e7399a01341f8da4 SHA1 657dcefca170331cbf86fb7bca1d6ddecfbd62a6 SHA256 0cad06a6d2fe2122ecb251ef028d6851373e92e52ad459ecc2f475caaee6e20d
 MISC metadata.xml 761 RMD160 2478e9efbdac4793a44228e833444cf23dc9ca01 SHA1 b693f85c37122c3abeb32d25e2cb880659ab4474 SHA256 33e9507a9188dbc3166b364da4ed3fca2fdde285e3bedb1dbb9b7c8fe41dfbb3
