@@ -2,6 +2,10 @@
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  31 May 2010; Rion <rion4ik@notagmail.com> -nginx-0.8.36-r1.ebuild,
+  +nginx-0.8.38.ebuild:
+  new version
+
   15 May 2010; A. Vinogradov <spamslepnoga@inbox.ru>
   -nginx-0.8.34-r1.ebuild, -nginx-0.8.35.ebuild, -nginx-0.8.36.ebuild,
   metadata.xml:
